--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,12 @@ body {
   }
 
   .score{
-    
+    align-self: flex-start;
+    width: 200px;
+    margin-left: 12%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   
   @keyframes slide {
